test/fails/bad_functions/extern8.lgl
declare int f(a x);  // Invalid parameter type

void main() {
    return;
}